--- a/examples/megatron/configs/MI355X/qwen3_30B_A3B-BF16-pretrain.yaml
+++ b/examples/megatron/configs/MI355X/qwen3_30B_A3B-BF16-pretrain.yaml
@@ -21,8 +21,8 @@ modules:
       log_avg_reset_interval: 50
 
       # hyper parameters
-      train_iters: 50
-      micro_batch_size: 4
+      train_iters: 10
+      micro_batch_size: 1
       global_batch_size: 256
       seq_length: ${PRIMUS_SEQ_LENGTH:4096}
       max_position_embeddings: ${PRIMUS_MAX_POSITION_EMBEDDINGS:4096}
@@ -68,11 +68,29 @@ modules:
       ckpt_format: torch
       eval_iters: 0
 
+      # Pipeline warmup
+      pp_warmup: true
+
+      # Load balance
+      moe_router_force_load_balancing: true
+
       # Turbo
-      enable_primus_turbo: false
+      enable_primus_turbo: true
       use_turbo_attention: false
       use_turbo_grouped_mlp: false
 
       # Cross entropy flags
-      # cross_entropy_fusion_impl: "te"
-      # cross_entropy_loss_fusion: true
+      cross_entropy_fusion_impl: "te"
+      cross_entropy_loss_fusion: true
+
+      # DeepEp
+      use_turbo_deepep: true
+      turbo_deepep_num_cu: 32
+      turbo_deepep_use_comm_stream: false
+      moe_shared_expert_overlap: false
+      moe_router_dtype: fp32
+      turbo_sync_free_moe_stage: 1
+
+      # Manual GC
+      manual_gc: true
+      manual_gc_interval: 1
