--- a/primus/configs/modules/maxtext/trainer_base.yaml
+++ b/primus/configs/modules/maxtext/trainer_base.yaml
@@ -582,6 +582,9 @@ report_performance_metric_for_gcp_monitoring: false
 
 enable_tensorboard: true
 enable_wandb: false
+wandb_project: ""
+wandb_exp_name: ""
+wandb_save_dir: ""
 
 # Vertex AI Tensorboard Configurations - https://github.com/google/maxtext/tree/main/getting_started/Use_Vertex_AI_Tensorboard.md
 # Set to True for GCE, False if running via XPK
