--- a/primus/configs/modules/megatron/primus_megatron_module.yaml
+++ b/primus/configs/modules/megatron/primus_megatron_module.yaml
@@ -13,6 +13,7 @@ mlflow_upload_tracelens_report: false  # Generate and upload TraceLens analysis 
 mlflow_tracelens_ranks: null         # List of ranks to analyze with TraceLens (null = all)
 mlflow_tracelens_max_reports: null   # Max number of TraceLens reports (null = unlimited)
 mlflow_tracelens_output_format: all  # TraceLens report format: all (xlsx+csv), xlsx, or csv
+mlflow_tracelens_cleanup_after_upload: true  # Cleanup local reports after upload (true saves disk space)
 disable_compile_dependencies: true
 # NOTE:
 # - If `use_rocm_mem_info = True`, ROCm memory information will be collected
