--- a/examples/megatron/configs/MI300X/gpt_oss_20B-pretrain.yaml
+++ b/examples/megatron/configs/MI300X/gpt_oss_20B-pretrain.yaml
@@ -58,7 +58,7 @@ modules:
       overlap_param_gather: true
 
       # data
-      mock_data: true
+      mock_data: false
       train_data_path: "10 /data/c4-train.en_6_text_document"
       valid_data_path: "/data/c4-validation-91205-samples.en_text_document"
       test_data_path: "/data/c4-validation-91205-samples.en_text_document"
@@ -95,7 +95,7 @@ modules:
       disable_last_saving: true
       exit_on_missing_checkpoint: false
       ckpt_format: torch
-      eval_iters: 2
+      eval_iters: 32
       eval_interval: ${PRIMUS_EVAL_INTERVAL:5}
 
       # Turbo
