--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -116,18 +116,18 @@ jobs:
           elapsed=$((end_time - start_time))
           echo "⏱️ [build primus docker-v25.09-ainic] Total elapsed time: ${elapsed} seconds"
 
-          echo "> Build Docker Image with tag: ${{ env.IMAGE_TAG }}-slime-rocm7-mi355"
+          echo "> Build Docker Image with tag: ${{ env.IMAGE_TAG }}-slime-rocm7-mi355-base"
           start_time=$(date +%s)
           docker build -f $GITHUB_WORKSPACE/.github/workflows/docker/Dockerfile.slime.rocm7.gfx950 \
-               -t tasimage/primus:${{env.IMAGE_TAG}}-slime-rocm7-mi355 \
+               -t tasimage/primus:${{env.IMAGE_TAG}}-slime-rocm7-mi355-base \
                $GITHUB_WORKSPACE/.github/workflows/docker
           end_time=$(date +%s)
           elapsed=$((end_time - start_time))
-          echo "⏱️ [build primus docker-slime-rocm7-mi355] Total elapsed time: ${elapsed} seconds"
+          echo "⏱️ [build primus docker-slime-rocm7-mi355-base] Total elapsed time: ${elapsed} seconds"
 
-          docker tag tasimage/primus:${{env.IMAGE_TAG}}-slime-rocm7-mi355 docker.io/tasimage/primus:${{env.IMAGE_TAG}}-slime-rocm7-mi355
+          docker tag tasimage/primus:${{env.IMAGE_TAG}}-slime-rocm7-mi355-base docker.io/tasimage/primus:${{env.IMAGE_TAG}}-slime-rocm7-mi355-base
           docker login -u tasimage -p ${{ secrets.PRIMUS_DOCKER_HUB_TOKEN }}
-          docker push docker.io/tasimage/primus:${{env.IMAGE_TAG}}-slime-rocm7-mi355
+          docker push docker.io/tasimage/primus:${{env.IMAGE_TAG}}-slime-rocm7-mi355-base
           docker login -u rocmshared -p ${{ secrets.ROCM_DOCKER_HUB_TOKEN }}
 
           echo "> Build Docker Image with tag: ${{ env.IMAGE_TAG }}-v25.10-ainic"
