--- a/primus/configs/modules/megatron/primus_pipeline.yaml
+++ b/primus/configs/modules/megatron/primus_pipeline.yaml
@@ -1,7 +1,7 @@
 patch_primus_pipeline: false
 
-pp_algorithm: "1f1b-interleaved" # "1f1b", "1f1b-interleaved", "zero-bubble", "zbv-formatted", "zbv-greedy"
-
-cached_fwd_chunks_limit: 16
+pp_algorithm: "1f1b-interleaved" # "1f1b", "1f1b-interleaved", "zero-bubble", "zbv-formatted", "v-half", "v-min"
 
 communication_method: "async_p2p" # "async_p2p", "batch_p2p"
+
+debug_scheduler_table: false
