--- a/primus/configs/models/megatron/deepseek_v2_lite.yaml
+++ b/primus/configs/models/megatron/deepseek_v2_lite.yaml
@@ -4,7 +4,7 @@ extends:
 # https://huggingface.co/deepseek-ai/DeepSeek-V2-Lite
 # 16B total params, 2.4B active params
 
-tokenizer_type: DeepSeekV2Tokenizer
+tokenizer_type: HuggingFaceTokenizer
 tokenizer_model: deepseek-ai/DeepSeek-V2-Lite
 
 # model
