--- a/runner/.primus.yaml
+++ b/runner/.primus.yaml
@@ -75,6 +75,10 @@ container:
       - "HF_TOKEN"
       - "WANDB_API_KEY"
       - "ENABLE_NUMA_BINDING"
+      - "REBUILD_PRIMUS_TURBO"
+      - "USING_AINIC"
+      - "PATCH_TE_FLASH_ATTN"
+      - "REBUILD_BNXT"
 
 
 # Direct mode settings
